Make sure Krita doesn't request alpha-enabled texture buffers

glBlendFunc doesn't support correct alpha blending (alpha channel
value should be calculated separately), so we must ensure that the
calculated alpha value is just dropped entirely.

BUG:404935
BUG:405540